# ChangeLog for net-misc/dibbler
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dibbler/ChangeLog,v 1.24 2013/12/02 14:30:20 voyageur Exp $

*dibbler-0.8.4 (02 Dec 2013)

  02 Dec 2013; Bernard Cafarelli <voyageur@gentoo.org> +dibbler-0.8.4.ebuild,
  metadata.xml:
  Adding myself to maintainers (mostly for dibbler-client), version bump

  09 Nov 2013; Pacho Ramos <pacho@gentoo.org> dibbler-0.8.3-r1.ebuild:
  x86 stable, bug #477168

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> dibbler-0.8.3-r1.ebuild:
  Stable for amd64, wrt bug #477168

  18 Sep 2013; Jeroen Roovers <jer@gentoo.org> dibbler-0.8.3-r1.ebuild:
  Stable for HPPA (bug #477168).

  14 Sep 2013; Pacho Ramos <pacho@gentoo.org> dibbler-0.8.3-r1.ebuild:
  Fix deps #484908 by Aballier

*dibbler-0.8.3-r1 (14 Sep 2013)

  14 Sep 2013; Pacho Ramos <pacho@gentoo.org> +dibbler-0.8.3-r1.ebuild,
  +files/dibbler-client.service, -dibbler-0.8.0.ebuild, -dibbler-0.8.2.ebuild,
  -dibbler-0.8.3.ebuild, -files/dibbler-0.8.2-gcc47.patch,
  -files/dibbler-gcc-4.1.patch:
  Install unit file, drop old

  13 Sep 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  drop to maintainer-needed

*dibbler-0.8.3 (05 Apr 2013)

  05 Apr 2013; Sergey Popov <pinkbyte@gentoo.org> +dibbler-0.8.3.ebuild:
  Version bump, wrt bug #461556. Add epatch_user, use readme.gentoo eclass,
  some generic cleanups

  12 Jul 2012; Markos Chandras <hwoarang@gentoo.org>
  +files/dibbler-0.8.2-gcc47.patch, dibbler-0.8.2.ebuild:
  Add gcc-4.7 patch. Bug #426342

*dibbler-0.8.2 (15 May 2012)

  15 May 2012; Markos Chandras <hwoarang@gentoo.org> +dibbler-0.8.2.ebuild:
  version bump

  15 May 2012; Markos Chandras <hwoarang@gentoo.org> dibbler-0.8.0.ebuild:
  Fix doc useflag. Bug #395593

  15 May 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add myself as maintainer

  14 May 2012; Pacho Ramos <pacho@gentoo.org> -dibbler-0.4.1.ebuild,