@@ -10,13 +10,13 @@ DIST dibbler-0.8.3.tar.gz 3993154 SHA256 8513ef956bc16f716f0474f86cbe2c53dd0b3ab
 DIST dibbler-0.8.4.tar.gz 4292008 SHA256 90382709200b6f1c4d403aceeedb52fd5633cfb71c7df3742062ddfe8b71c013 SHA512 7d0323abd42d0ab57fcaecb30c1354a831f2b8b8b300a9a20678062ef52743b5724569d1885f3866d517abbfae48651966734d47a6c5f43d19fd65332ebeca6c WHIRLPOOL f1d9c2219daebe3f69fbcde956a164902fa2b6ba1448d95a00aaada0423a995d013256fc35fbc8c860efd11f28b0dd42f97de4761a31f0b7662dec23bb36b25a
 EBUILD dibbler-0.7.3.ebuild 1558 SHA256 bda85f287ceea713fceeefd7b4399ef0aa8b47169cf2ec3307493453e6d51622 SHA512 2217e652a201a4f39608495f83e64b600104de665f021c4864f20fbdad04e52cbd76b87d9833eb7f266e2d0cad2d2bed1478d6c1a75374229aac569e8340bdf8 WHIRLPOOL 78c8d67e96987181db5f2816bd3a66e79af21961eab6bf7f1cf5a61df54cc842195d369f9007fd3a9df85596ef2a7512a37f08601825d8a3d8bcc60e0249ee78
 EBUILD dibbler-0.8.3-r1.ebuild 1298 SHA256 dd1be129793c5452195252ae41ffb117e7f4e2ed222eca362bf0f940b5143a67 SHA512 9694645b7b93a77455345f9ed165be8f375a5e6109edb0065a35d5634f2ec02bd30f2f7eef1db8f24b6415b46e1740f9939347c189ab1d77da138b4c92085660 WHIRLPOOL 0d172264e1986ea62b1ef137c4e67aa6a198c6ca4159ad95347467a25f7dc0c741a046d28d51e221fc01185a002c903d3af638194816fef7ecf2651a1cce94e7
-EBUILD dibbler-0.8.4.ebuild 1301 SHA256 38ef537cc0830277ca225dd22785ddec6485b2a4958f9735e33ee8897e4e21fd SHA512 f2cf4dee9fef3f9aad9432c605eddcd0ea7e9b7d9a46f6d9c9435fce3640d9a52be8224912d517b4f34b3a2c56c0c43557f500e5bd1c9ac3bac165ef84677ba3 WHIRLPOOL f3fcff6223e493cea04dba0449dd46bb8f51df009c22dd3b67dcb94dc4000994e1e5c285cf36d7f6bce2492f81f73fe6f88a667443c9b08faa5d6a2305360850
-MISC ChangeLog 3766 SHA256 0376c085ea621f6e2cd7abb6c08923ec0baa2c2872751bb1c39a59488db1a5a1 SHA512 ef60c10ef262e55a042cae0c62c0ea418079ec8b23d7008bbd30f7b21c5fee43ceddceba31c903e98fb3dcf78154bb2f82f3f647c16caae9763eb855631a39c5 WHIRLPOOL 7c5a7e728ccd88630d0b767ae485e8a9a84fb7676ffb0f4c5ce9ddda14a3c1908311db2130aa230046d4ed0750862b755c8e63094f4cae5397dfc00e688d08e5
+EBUILD dibbler-0.8.4.ebuild 1295 SHA256 1e339e4ffcc8fdf0a252705faa75b07bb5b701a89b5975d34d268b2946b5b58f SHA512 bb2b7c7fb90752a7703352969dcbb2e71385ae0bbb8a9ff34505b36ccd3c4c00eef95fda1db4eb3258bafb4e5ddaed799ac8012cfaec1d8269bd73ba4209db4c WHIRLPOOL de3990c90b1f47703e35bb3c489db43a07fae09608c7154e5dc801a2487f694353707a036a6dea31730ea6c25136c2ba62074f23ae110aa14d07df6af64c752e
+MISC ChangeLog 3864 SHA256 014b25e78ee911dc16ff03ba81f54e9af5657a41244b05bbe686a1bfb5cd1256 SHA512 e5a1e96926fa5dd08f325d3eee7d75012bc1f0da0157e29fd9475ce87545d9bfbc31d43de55985a99104918b8c75b495456a4bb04017952bce1f399acda69df5 WHIRLPOOL 1bb94fff5f2a47c557c54a60f0b867675cdd6850414a6fd822e7df6d87e624f86475c4165685b0bf15e5cb4b27a3a3147cbfea54510d446132df7f94622b7b87
 MISC metadata.xml 238 SHA256 325bc955f2a5e5f2ed4b013fb6ec3ab8308fa98e84ce1c503f6a78bf42f3234e SHA512 14453949e63d402e99c24dfede43ebcac8bf3fc5c731114141bed639d0e0b0e71ffce033ab268595c155dee0b58e04e1bbe4023554f7fd54031c2f90f607cde4 WHIRLPOOL c31742cff7c49498de00d096d5dbeb0177bccbdea3f5713baab174d9e1ec782b781f8eb7c87e0e52aa4968c2f2601d1a914dfb6e5e2e59b9a1ca1615a0a9d172
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlKcmYYACgkQFYEBGcdFJfIX1gD/Z0MbQpQt8janRv77P1WdPLpL
-rQE7l6nN4hjazZ6p/JYA/j4GdEz8Wio0TYJ3wm1RIvHT+FNOl8LZiEuprkxf/Apg
-=Mhxl
+iEUEAREIAAYFAlLj6H0ACgkQVWmRsqeSphN1HgCVGF7sjhhV5oFJ/ckxvmU28dyZ
+DwCfViBJAbzIeagsEtMzcCFPe0D2dWE=
+=Pvtb
 -----END PGP SIGNATURE-----
